Closed
Bug 1147669
Opened 10 years ago
Closed 10 years ago
Convert MarkId family of functions over to TraceEdge
Categories
(Core :: JavaScript: GC, defect)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
mozilla40
| Tracking | Status | |
|---|---|---|
| firefox40 | --- | fixed |
People
(Reporter: terrence, Assigned: terrence)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
|
17.55 KB,
patch
|
jonco
:
review+
|
Details | Diff | Splinter Review |
Trivial. We can now take advantage of the new architecture in ScanObjectGroup to jump right into marking and skip the tracing info setup.
Attachment #8583469 -
Flags: review?(jcoppeard)
Updated•10 years ago
|
Attachment #8583469 -
Flags: review?(jcoppeard) → review+
| Assignee | ||
Comment 1•10 years ago
|
||
Comment 2•10 years ago
|
||
Backed out in https://hg.mozilla.org/integration/mozilla-inbound/rev/99415fbccf83 because something in this push caused frequent 10.10 debug devtools-2 assertion failures like https://treeherder.mozilla.org/logviewer.html#?job_id=8197104&repo=mozilla-inbound
| Assignee | ||
Comment 3•10 years ago
|
||
The problem before was in the last patch in the series (bug 1147670):
https://treeherder.mozilla.org/#/jobs?repo=try&revision=514b9ba692a9
https://hg.mozilla.org/integration/mozilla-inbound/rev/46067a10bd37
Comment 4•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in
before you can comment on or make changes to this bug.
Description
•