Bug 1147669 - Replace id marking functions with TraceEdge; r=jonco

--HG--
extra : rebase_source : ed071314c1e007e374f05bc2497b8598b92317f2