js/src/gc/Marking.h
@@ -209,23 +209,6 @@ MarkGCThingRoot(JSTracer *trc, void **thingp, const char *name);
 void
 MarkGCThingUnbarriered(JSTracer *trc, void **thingp, const char *name);
 
-/*** ID Marking ***/
-
-void
-MarkId(JSTracer *trc, BarrieredBase<jsid> *id, const char *name);
-
-void
-MarkIdRoot(JSTracer *trc, jsid *id, const char *name);
-
-void
-MarkIdUnbarriered(JSTracer *trc, jsid *id, const char *name);
-
-void
-MarkIdRange(JSTracer *trc, size_t len, HeapId *vec, const char *name);
-
-void
-MarkIdRootRange(JSTracer *trc, size_t len, jsid *vec, const char *name);
-
 /*** Value Marking ***/
 
 bool
@@ -259,6 +242,10 @@ void
 PushArena(GCMarker *gcmarker, ArenaHeader *aheader);
 
 /*** Generic ***/
+
+template <typename T>
+static bool
+IsMarked(T **thingp);
 
 inline bool
 IsMarked(BarrieredBase<Value> *v)
