js/src/gc/Tracer.cpp
@@ -38,7 +38,7 @@ JS_CallUnbarrieredValueTracer(JSTracer *trc, Value *valuep, const char *name)
 JS_PUBLIC_API(void)
 JS_CallUnbarrieredIdTracer(JSTracer *trc, jsid *idp, const char *name)
 {
-    MarkIdUnbarriered(trc, idp, name);
+    TraceManuallyBarrieredEdge(trc, idp, name);
 }
 
 JS_PUBLIC_API(void)
@@ -68,7 +68,7 @@ JS_CallValueTracer(JSTracer *trc, JS::Heap<JS::Value> *valuep, const char *name)
 JS_PUBLIC_API(void)
 JS_CallIdTracer(JSTracer *trc, JS::Heap<jsid> *idp, const char *name)
 {
-    MarkIdUnbarriered(trc, idp->unsafeGet(), name);
+    TraceManuallyBarrieredEdge(trc, idp->unsafeGet(), name);
 }
 
 JS_PUBLIC_API(void)
