js/src/jsatom.h
@@ -22,6 +22,11 @@ class JSAutoByteString;
 struct JSIdArray {
     int length;
     js::HeapId vector[1];    /* actually, length jsid words */
+
+    js::HeapId *begin() { return vector; }
+    const js::HeapId *begin() const { return vector; }
+    js::HeapId *end() { return vector + length; }
+    const js::HeapId *end() const { return vector + length; }
 };
 
 namespace js {
